--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -1,4 +1,25 @@
-\chapter{Definisjoner}
+\chapter{Introduksjon}
+
+\section{Optimaliseringsproblemet}
+
+La \(f: \Omega \to \R\) være en kost-funksjon som vi ønsker å maksimere eller minimere, der \(\Omega \subset \R^d\) er mengden av mulige løsninger.
+
+\begin{definition}{Optimeringsproblemet \((P)\)}{optimization_problem}
+  \[
+    \min_{x \in \Omega} f(x) \quad \text{eller} \quad \max_{x \in \Omega} f(x).
+  \]
+
+\end{definition}
+
+\section*{Typer optimering}
+
+\begin{itemize}
+  \item \textbf{Ubundet optimalisering (Fri, Gratis)}: Ingen restriksjoner på \(x\) og \(\Omega = \R^d\).
+  \item \textbf{Konveks optimalisering}: Restriksjoner på \(x\) og \(\Omega \subset \R^d\).
+  \item \textbf{Bundet optimalisering}: Restriksjoner på \(x\) og \(\Omega \subset \R^d\).
+\end{itemize}
+
+\section{Matematiske Definisjoner og Notasjon}
 
 \section{Ytre og indre produkter}
 \begin{definition}{Ytre produkt}{outer_product}
