--- a/sections/lectures.tex
+++ b/sections/lectures.tex
@@ -793,7 +793,9 @@ Equivalently, the vectors are mutually orthogonal under the inner product \(\lan
     \;=\; -\,\frac{\langle r_0,\;p_l\rangle}{\langle Q\,p_l,\;p_l\rangle},
     \quad\text{where}\quad r_0 \;=\; Q\,x_0 - b.
   \]
+
   Careful manipulation (and using the fact that \(\langle p_i, Q\,p_j\rangle=0\) for \(i\neq j\)) shows \(\sigma_l = \alpha_l\). Hence \(x^\star = x_d\).
+
 \end{proof}
 
 \subsection*{The CG Iteration}
@@ -1017,7 +1019,7 @@ Hvis \( f \) er strengt konveks (og dermed \(x_{k+1} \neq x_k \) for alle \( k \
 \begin{figure}[H]
   \begin{minipage}[t]{0.49\textwidth}
     \begin{algorithm}[H]
-      \caption{BFGS with Wolfe Conditions}
+      \caption{BFGS + Wolfe Conditions}
       \label{alg:bfgs}
       \KwIn{Initial point \(x_0\), tolerance \(\epsilon>0\), \(N\), \(H_0 = I\)}
       \For{\(k=0,1,\ldots,N\)}{
@@ -1059,7 +1061,6 @@ Hvis \( f \) er strengt konveks (og dermed \(x_{k+1} \neq x_k \) for alle \( k \
     \end{algorithm}
   \end{minipage}
 \end{figure}
-
 
 \section{Lecture 11 \date{10. Februar 2025}}
 
@@ -1295,13 +1296,371 @@ Hvis \( f \) er strengt konveks (og dermed \(x_{k+1} \neq x_k \) for alle \( k \
   \end{itemize}
 \end{proposition}
 
+\section{Lecture 12 \date{14. February 2025}}
+
+\begin{proposition}{}{}
+  Anta \(\Omega \neq \emptyset\) og konveks, med \(\symbf{x}^\star \in \Omega\).
+  \begin{itemize}
+    \item Hvis \(\symbf{x}^\star\) er en lokal løsning til (P) da er
+          \[
+            \pi_{\Omega}(\symbf{x}^\star - \alpha \nabla f(\symbf{x}^\star)) = \symbf{x}^\star \quad \forall \alpha > 0 \tag{\(\ast\)}
+          \]
+    \item Hvis \(f\) er konveks og differensierbar, og \((\ast)\) holder for en \(\alpha > 0\), da er \(\symbf{x}^\star\) en global løsning til (P).
+  \end{itemize}
+\end{proposition}
+
+\begin{proof}
+  Recall that:
+  \begin{align*}
+    \symbf{x}^\star = \pi_{\Omega}(\symbf{z}) \iff \symbf{x}^\star \in \Omega \text{ og } \symbf{z} - \symbf{x}^\star \in N_{\Omega}(\symbf{x}^\star)
+  \end{align*}
+  Thus:
+  \begin{align*}
+    \symbf{x}^\star & = \pi_{\Omega}(\symbf{x}^\star - \alpha \nabla f(\symbf{x}^\star))                                                     \\
+                    & \iff \left(\symbf{x}^\star - \alpha \nabla f(\symbf{x}^\star)\right) - \symbf{x}^\star \in N_{\Omega}(\symbf{x}^\star) \\
+                    & \iff -\alpha \nabla f(\symbf{x}^\star) \in N_{\Omega}(\symbf{x}^\star) > 0
+  \end{align*}
+  \qed
+\end{proof}
+
+That is \(\symbf{x}^\star\) is a fixed point of the mapping \(G: \R^d \to \R^d\) defined by:
+\[
+  G(\symbf{x}) = \pi_{\Omega}(\symbf{x} - \alpha \nabla f(\symbf{x}))
+\]
+\( \rightarrow \) Fixed point iteration gives the \emph{projected gradient descent method}.
 
 
+\begin{enumerate}
+  \item In step \(k\)
+        \begin{align*}
+          \symbf{y} \leftarrow \symbf{x}^{(k)} - \alpha \nabla f(\symbf{x}^{(k)}) \\
+          \symbf{x} \leftarrow \pi_{\Omega}(\symbf{y})
+        \end{align*}
+  \item One can show that this method converges if \(\alpha\) is chosen sufficiently small and \(f, \omega\) are \emph{sufficiently nice}.
+  \item In practice: Need an effecient way for computing \(\pi_{\Omega}(\symbf{y})\) (the projection onto \(\Omega\)).
+        \textbf{E.g.} for \(\Omega = \{ \symbf{x} \in \R^d \mid \symbf{x} \geq \symbf{0} \}\) (the non-negative orthant) we have:
+        \[
+          \pi_{\Omega}(\symbf{y}) = \max(\symbf{y}, \symbf{0})
+        \]
+        \begin{center}
+          \begin{tikzpicture}[scale=1.5]
+            % Axes
+            \draw[->] (-2,0) -- (2,0) node[right] {$x$};
+            \draw[->] (0,-1) -- (0,2) node[above] {$y$};
+
+            % Quadrant shading
+            \fill[gray!20] (0,0) -- (2,0) -- (2,2) -- (0,2) -- cycle;
+
+            % Example point and its projection
+            \coordinate (P) at (-1,1);
+            \coordinate (Q) at (0,1);
+
+            % Draw projection line
+            \draw[dashed] (P) -- (Q);
+
+            % Points
+            \fill (P) circle (1.5pt) node[left] {$y$};
+            \fill (Q) circle (1.5pt) node[right] {$\pi_\Omega(y)$};
+
+            % Label the region
+            \node at (1,1) {$\Omega$};
+          \end{tikzpicture}
+        \end{center}
+
+\end{enumerate}
 
 
+\begin{example}{Unit ball}{}
+  \[
+    \Omega = \mathcal{B}_1(0) = \{ \symbf{x} \in \R^d \mid \norm{\symbf{x}}_2 \leq 1 \}
+  \]
+  \[
+    \pi_{\Omega}(\symbf{y}) = \begin{cases}
+      \symbf{y}                            & \text{if } \norm{\symbf{y}}_2 \leq 1 \\
+      \frac{\symbf{y}}{\norm{\symbf{y}}_2} & \text{if } \norm{\symbf{y}}_2 > 1
+    \end{cases}
+  \]
+  \begin{tikzpicture}
+    % Axes
+    \draw[->] (-2,0) -- (2,0) node[right] {$x$};
+    \draw[->] (0,-2) -- (0,2) node[above] {$y$};
+
+    % Unit circle
+    \draw (0,0) circle (1);
+
+    % Example point and its projection
+    \coordinate (P) at (1.5,1.5);
+    \coordinate (Q) at (0.707,0.707);
+
+    % Draw projection line
+    \draw[dashed] (P) -- (Q);
+
+    % Points
+    \fill (P) circle (1.5pt) node[right] {$y$};
+    \fill (Q) circle (1.5pt) node[right] {$\pi_\Omega(y)$};
+  \end{tikzpicture}
+\end{example}
+
+\subsection{Linear constraints}
+
+Consider the set: \(\Omega := \{\symbf{x} : A\symbf{x} = \symbf{b}\}\) where \(A \in \R^{m \times d}\) and \(\symbf{b} \in \R^m\) with \(m < d\).
+
+Now solve \(min_x f(\symbf{x})\) s.t. \(A\symbf{x} = \symbf{b}\).
+
+Let \(\symbf{x} \in \Omega\). Then \(\symbf{p}\) is a feasible direction at \(\symbf{x}\) if :
+\begin{align*}
+  \symbf{x} + t \symbf{p} \in \Omega \quad \text{for some } t > 0 \\
+  \iff A(\symbf{x} + t \symbf{p}) = \symbf{b}                     \\
+  \iff A\symbf{x} + t A\symbf{p} = \symbf{b}                      \\
+  \iff A\symbf{p} = \symbf{0} \iff p\in \ker(A)
+\end{align*}
+
+Thus \(T_{\Omega}(\symbf{x}) = \overline{\ker(A)} = \ker(A)\).
+
+Morover
+\begin{align*}
+  N_{\Omega}(\symbf{x}) = \{\symbf{q} \in \R^d : \inner{\symbf{q}, \symbf{p}} \leq 0 \quad \forall \symbf{p} \in T_{\Omega}(\symbf{x}) = \ker(A)\} \\
+  = \{\symbf{q} \in \R^d : \symbf{q} \cdot \inner{\symbf{q}, \pm \symbf{p}} \leq 0 \quad \forall \symbf{p} \in \ker(A)\}                           \\
+  = \{\symbf{q} \in \R^d : \inner{\symbf{q}, \symbf{q}} = 0\}
+\end{align*}
+
+\begin{remark}{}{}
+  \begin{align*}
+    \symbf{p} \in \ker(A) \rightarrow -\symbf{p} \in \ker(A) \\
+  \end{align*}
+\end{remark}
+
+\begin{remark}{}{}
+  We have:
+  \begin{align*}
+    \left(\ker(A)\right)^\perp = \operatorname{range}(A^T) \rightarrow N_{\Omega}(\symbf{x}) = \operatorname{range}(A^T)
+  \end{align*}
+
+  Thus we get the optimality condition:
+
+  \begin{align*}
+    + \nabla f(\symbf{x}) \in \operatorname{range}(A^T)
+  \end{align*}
+  
+\end{remark}
+
+\begin{lemma}{}{}
+  Assume that \(\symbf{x}^\star\) is a local solution to (P) s.t. \(A \symbf{x} = \symbf{b}\) then there exists a \(\lambda^\star \in \R^m\) s.t.:
+  \begin{align*}
+    \nabla f(\symbf{x}^\star) + A^T \lambda^\star = 0 \\
+    A \symbf{x}^\star = \symbf{b}
+  \end{align*}
+  Conversly, if \(f\) is convex and \((\symbf{x}^\star, \lambda^\star)\) solves:
+  \begin{align*}
+    \nabla f(\symbf{x}^\star) = A^T \lambda^\star = 0 \\
+    A \symbf{x}^\star = \symbf{b}
+  \end{align*}
+  then \(\symbf{x}^\star\) is a global solution to (P).
+  \emph{Proof?} \(\rightarrow\) optimality conditions. \qed
+\end{lemma}
+
+The vector \(\lambda^\star\) is called the \emph{Lagrange multiplier} for \(\symbf{x}^\star\).
+
+\section{Lecture 14 \date{14. February 2025}}
+
+% Inserting definition of Slater's condition with intuition
+\begin{definition}{Slater's Condition}{slater_condition}
+  For a convex problem with inequality constraints
+  \[
+    c_i(x) \le 0,\quad i=1,2,\dots,m,
+  \]
+  Slater's condition holds if there exists an \(x\) such that
+  \[
+    c_i(x) < 0 \quad \text{for all } i.
+  \]
+\end{definition}
+
+\begin{remark}{Intuition}{}
+  This condition guarantees that the feasible region has a nonempty interior.
+
+  In other words, the constraints are not all 'tight' at every point, which helps secure strong duality and the existence of Lagrange multipliers.
+\end{remark}
+
+\begin{theorem}{KKT conditions}{kkt}
+
+  \medskip
+
+  \begin{itemize}
+    \item \(A_i\) are the active constraints/indices at \(x\)
+    \item \(C\) is the matrix of equality constraints.
+    \item \(p\) is the direction of descent.
+    \item \(x\) is the current point (feasible).
+    \item \(T_{\Omega}(x)\) is the tangent cone at \(x\).
+    \item \(c_i(x)\) is the value of the \(i\)-th constraint at \(x\).
+    \item \(Ax\) is the value of the equality constraints at \(x\).
+    \item \(b\) is the vector of equality constraints.
+  \end{itemize}
+  \begin{align*}
+    \mathcal{A}_1(x)            & := \{i \in \mathcal{I} \mid c_i(x) = 0\},                     \\
+    \mathcal{A}_2(x)            & := \{1 \leq i \leq m \mid (Ax)_i = b_i\} \tag{Active indices} \\
+    \text{Active indices at } x & \in \Omega                                                    \\
+  \end{align*}
+
+  Assume that \emph{Slater's constraint} holds. Then, the following statements are equivalent:
+
+  \begin{align*}
+    p\in T_{\Omega}(x) & \Longleftrightarrow
+    \begin{cases}
+      \inner{\nabla c_i(x), p} \geq 0, & i \in \mathcal{A}_1(x) \\
+      (Ax)_i \geq 0,                   & i \in \mathcal{A}_2(x) \\
+      Cp = 0,                          &                        \\
+    \end{cases}
+  \end{align*}
+
+\end{theorem}
 
 
+\begin{lemma}{Farka's Lemma}{farkas_lemma}
+  Let \(A \in \mathbb{R}^{m \times n}\) and \(c \in \mathbb{R}^n\). Then, exactly one of the following statements is true:
+  \begin{enumerate}
+    \item[] \((1)\) There exists an \(x \in \mathbb{R}^n\) such that \(Ax \preceq 0\) and \(c^T x < 0\).
+    \item[] \((2)\) There exists a \(y \in \mathbb{R}^m\) such that \(A^T y + c = 0\) and \(y \succeq 0\).
+  \end{enumerate}
+\end{lemma}
+
+\begin{proof}
+  \begin{enumerate}
+    \item[] Assume that \((1)\) holds. Then \(Ax = b\) and \(x \ge 0\). If there exists a \(y\) such that \(y^T A \ge 0\), then
+          \[
+            y^T b = y^T Ax = (y^T A)x \ge 0,
+          \]
+          which contradicts \(y^T b < 0\).
+    \item[] Assume that \((1)\) does not hold. We want to show that \((2)\) holds.
+
+          Let
+          \[
+            K = \{Ax \mid x \ge 0\}.
+          \]
+          Since \((1)\) does not hold, \(b \notin K\). Since \(K\) is a closed convex cone, by the separating hyperplane theorem, there exists a \(y \in \mathbb{R}^m\) such that
+          \[
+            y^T b < y^T z \quad \text{for all } z \in K.
+          \]
+          Since \(0 \in K\), we have \(y^T b < 0\).
+
+          Now, for any \(x \ge 0\), we have \(Ax \in K\), so \(y^T b < y^T Ax\).
+
+          Let \(x = e_i\), where \(e_i\) is the \(i\)-th standard basis vector. Then \(x \ge 0\), and
+          \[
+            y^T A e_i = (y^T A)_i > 0.
+          \]
+          Thus \(y^T A \ge 0\).
+  \end{enumerate}
+
+  \begin{center}
+    \begin{tikzpicture}
+      \draw[->, thick] (-1, 0) -- (4, 0) node[right] {$x$};
+      \draw[->, thick] (0, -1) -- (0, 4) node[above] {$y$};
+
+      \fill[green!30] (0, 0) -- (3, 1) -- (3, 3) -- cycle;
+      \node at (1.5, 1.5) {$K$};
+
+      \node[circle, fill=red, inner sep=1.5pt, label=right:$b$] (b) at (2, -0.5) {};
+
+      \draw[dashed, purple] (b) -- (2, 3);
+      \draw[<->, dashed, black] (0, -0.5) -- (2, -0.5) node[midway, below, black] {$y^Tb < 0$};
+      \draw[<->, dashed, black] (0, 3) -- (2, 3) node[midway, above, black] {$y^Tz > 0$};
+
+      % Adding new vectors
+      \draw[->, thick, blue] (0, 0) -- (1.5, 2.5) node[above] {$q$};
+      \draw[->, thick, red] (0, 0) -- (-0.5, 2) node[left] {$p$};
+      \draw[->, thick, orange] (0, 0) -- (0.75, 1.25) node[right] {$proj_K(p)$};
+      \draw[dashed] (-0.5, 2) -- (0.75, 1.25);
+    \end{tikzpicture}
+  \end{center}
+
+  The figure illustrates the geometric interpretation of Farkas' Lemma. The green region $K$ represents the cone of feasible points $\{Ax \mid x \ge 0\}$. The point $b$ (in red) lies outside this cone. The purple dashed line represents the separating hyperplane, which separates $b$ from $K$. Vector $p$ (in red) is projected onto the cone $K$, resulting in $proj_K(p)$ (in orange). Vector $q$ (in blue) lies inside the cone $K$. The black dashed lines show that the inner product $y^Tb$ is negative, while the inner product $y^Tz$ is positive for points $z$ in the cone $K$.
+
+\end{proof}
 
 
+\begin{theorem}{KKT conditions}{kkt_conditions}
+  Assume \(c_i, i \in \mathcal{I}\) are concave in \(\mathcal{C}^1\),
+  \(A\in \mathbb{R}^{m \times d}, b \in \mathbb{R}^m\) and \(C\in \mathbb{R}^{l \times d}\) and that \(f:\mathbb{R}^d \to \mathbb{R}\) is \(\mathcal{C}^1\). Assume that \emph{Slater's condition} holds.
+
+  If \(x^\star\) is a local minimum of \(\min_x f(x)\) s.t.
+  \[
+    \begin{cases}
+      c_i(x) \geq 0, & \forall i \in \mathcal{I} \\
+      Ax \geq b,     &                           \\
+      Cx = b,        &
+    \end{cases}
+  \]
+  then there exists a \emph{Lagrange multipliers} \(\lambda^\star, \mu^\star\) with \(v \in \R^e\) s.t. the \emph{KKT conditions} hold:
+
+  Then, the following statements are equivalent:
+  \begin{align}
+    \nabla f(x^\star) = \sum_{i\in \mathcal{I}} \lambda_i^\star \nabla c_i(x^\star) + A^T \mu^\star + C^T v^\star \\
+    \begin{cases}
+      c_i(x^\star) \geq 0, & \forall i \in \mathcal{I} \\
+      Ax^\star \geq b,     &                           \\
+      Cx^\star = e,        &                           \\
+    \end{cases} \tag{Feasibility}                                                              \\
+    \begin{cases}
+      \lambda_i^\star \geq 0, & \forall i \in \mathcal{I} \\
+      \mu_j^\star \in \geq 0, & \forall j \in \mathcal{J} \\
+    \end{cases} \tag{Dual feasibility}                                                           \\
+    \begin{cases}
+      \lambda_i^\star c_i(x^\star) = 0, & \forall i \in \mathcal{I} \\
+      \mu_j^\star C_j^T = 0,            & \forall j \in \mathcal{J} \\
+    \end{cases} \tag{Complementary slackness}                                                 \\
+    \begin{cases}
+      \lambda_i^\star c_i(x^\star) = 0,      & \forall i \in \mathcal{I} \\
+      \inner{\mu_j^\star, Ax^\star - b} = 0, & \forall j \in \mathcal{J} \\
+    \end{cases} \tag{Complementary slackness}
+  \end{align}
+\end{theorem}
+
+\begin{proof}{}{}
+  We have the optimality condition:
+  \[
+    \inner{\nabla f(x^\star), p} \geq 0 \, \forall p \in T_{\Omega}(x^\star)
+  \]
+  \medskip
+  \begin{align*}
+    p \in T_{\Omega}(x^\star) \iff
+    \begin{cases}
+      \inner{\nabla c_i (x^\star), p }\geq 0 & \forall i \in \mathcal{A}_1(x^\star)                         \\
+      \text{or: there does not exist any } p \in \R^d \text{ such that:} & \\
+      \begin{cases}
+        \inner{\nabla c_i (x^\star), p }\geq 0 & \forall i \in \mathcal{A}_1(x^\star) \\
+        \inner{A_i^T , p }\geq 0               & \forall i \in \mathcal{A}_2(x^\star) \\
+        \inner{ (C_i )^T, p } = 0              & \forall 1 \leq i \leq l              \\
+        \inner{\nabla f (x^\star), p } < 0     & 
+      \end{cases}                             \\
+      (Ap)_i \geq 0 & \forall i \in \mathcal{A}_2(x^\star)                                                      \\
+      Cp = 0        &
+    \end{cases}
+  \end{align*}
+
+  The second alternative is Farka's Lemma does not hold \(\implies\) The first holds.
+
+  \begin{align*}
+    \nabla f(x^\star) & = \sum_{i\in \mathcal{A}_1(x^\star)} \lambda_i^\star \nabla c_i(x^\star) + \sum_{i \in \mathcal{A}_2(x^\star)} \mu_i^\star A_i^T + \sum_{i=1}^l v_i^\star C_i^T \\
+  \end{align*}
+
+  For some  \(\lambda_i^\star \geq 0, \mu_i^\star \geq 0, v_i^\star \in \R\).
+
+  Now define: \(\lambda_i^\star = 0 \) for \(i \notin \mathcal{A}_1(x^\star)\) and \(\mu_i^\star = 0\) for \(i \notin \mathcal{A}_2(x^\star)\).
+
+  Then we have:
+  \begin{align*}
+    \nabla f(x^\star) & = \sum_{i\in \mathcal{I}} \lambda_i^\star \nabla c_i(x^\star) + \sum_{1 \leq i \leq m} \mu_i^\star A_i^T + \sum_{1 \leq i \leq l} v_i^\star C_i^T = \text{(1)} \\
+  \end{align*}
+  \qed
+\end{proof}
+
+\begin{definition}{The Lagrangian of a problem}{lagrangian}
+  The Lagrangian of a problem is the function \(\mathcal{L}: \mathbb{R}^d \times \mathbb{R}^m \times \mathbb{R}^l \times \mathbb{R}^e \to \mathbb{R}\) defined as:
+  \begin{align*}
+    \mathcal{L}(x, \lambda, \mu, v) &= f(x) + \sum_{i\in \mathcal{I}} \lambda_i c_i(x) + \sum_{1 \leq i \leq m} \mu_i (Ax - b)_i + \sum_{1 \leq i \leq l} v_i (Cx - b)_i \\
+    &= f(x) - \sum_{i \in \mathcal{I}} \lambda_i c_i(x) - \inner{\mu, Ax - b} - \inner{v, Cx - e}\footnote{\( (1) \iff \nabla_x \mathcal{L}(x, \lambda, \mu, v) = 0\)}
+  \end{align*}
+
+\end{definition}
 
 
