Add title page for course notes on Optimization I (TMA4180)
- Created a new title page in LaTeX format.
- Included course code, title, author information, semester details, and university affiliation.
- Added formatting elements such as horizontal rules and color specifications.

--- a/bib/references.bib
+++ b/bib/references.bib
@@ -40,3 +40,12 @@
     isbn      = {978-0471494638},
     note      = {Discusses relative performance of quasi-Newton methods}
 }
+
+@book{luenberger1984linear,
+    author    = {Luenberger, David G.},
+    title     = {Linear and Nonlinear Programming},
+    publisher = {Addison-Wesley},
+    year      = {1984},
+    edition   = {2},
+    isbn      = {978-0201157946}
+}
