--- a/main.tex
+++ b/main.tex
@@ -4,31 +4,11 @@
 \usepackage[acronym,symbols,nogroupskip]{glossaries-extra}
 \usepackage[backend=biber]{biblatex}
 
-\pgfplotsset{compat=newest}
-\usepgfplotslibrary{colormaps}  
-\usetikzlibrary{
-    backgrounds,
-    positioning,
-    arrows.meta,
-    calc,
-    decorations.pathreplacing,
-    3d
-}
-\pgfplotsset{compat=1.18}
-
-\hypersetup{
-    colorlinks=true,
-    linkcolor=blue,
-    filecolor=magenta,
-    urlcolor=cyan,
-    citecolor=green,
-}
-
 \makeglossaries
-\addbibresource{bib/references.bib}
+\addbibresource{preamble/references.bib}
 \setglossarystyle{listhypergroup}
 
-\include{bib/glossary}
+\include{preamble/glossary}
 
 \begin{document}
 
