Refactor convex optimization chapter and update main document structure
- Removed the convex optimization chapter and replaced it with a constrained optimization chapter.
- Updated the main document to include the new constrained optimization chapter.
- Adjusted the appendix to reflect changes in the included chapters.
- Modified the table environment in the formulas appendix for better positioning.
- Created a new style file for modern LaTeX setup and fonts, enhancing overall document aesthetics and functionality.

--- a/main.tex
+++ b/main.tex
@@ -1,23 +1,33 @@
 \documentclass[10pt, a4paper]{report}
-\usepackage{trymtex}
+\usepackage{preamble/trymtex}
 \usepackage{optidef}
 \usepackage[acronym,symbols,nogroupskip]{glossaries-extra}
 \usepackage[backend=biber]{biblatex}
+\usepackage{forest}
+\usetikzlibrary{
+    backgrounds,
+    positioning,
+    arrows.meta,
+    calc,
+    decorations.pathreplacing,
+    3d
+}
+\usetikzlibrary{arrows.meta}
 
 \makeglossaries
 \addbibresource{preamble/bib/references.bib}
 \setglossarystyle{listhypergroup}
 
 \includeonly{
-    preamble/frontmatter/titlepage,
-    preamble/bib/glossary,
-    chapters/1/introduction,
-    % chapters/2/unconstrained_optimization,
-    % chapters/3/convex_optimization,
-    % preamble/appendix/AlgorithmMap,
-    % preamble/appendix/Formulas,
-    % preamble/appendix/Functions,
-    preamble/appendix/LectureNotes,
+     preamble/frontmatter/titlepage,
+     preamble/bib/glossary,
+%     chapters/1/introduction,
+%     % chapters/2/unconstrained_optimization,
+        chapters/3/constrained_optimization,
+%     % preamble/appendix/AlgorithmMap,
+%     % preamble/appendix/Formulas,
+%     % preamble/appendix/Functions,
+%     preamble/appendix/LectureNotes,
 }
 
 \begin{document}
@@ -29,12 +39,11 @@
 
 \include{chapters/1/introduction}
 \include{chapters/2/unconstrained_optimization}
-\include{chapters/3/convex_optimization}
+\include{chapters/3/constrained_optimization}
 
 \clearpage
 
 \appendix
-\include{preamble/appendix/AlgorithmMap}
 \include{preamble/appendix/Formulas}
 \include{preamble/appendix/Functions}
 \include{preamble/appendix/LectureNotes}
