--- a/preamble/appendix/Formulas.tex
+++ b/preamble/appendix/Formulas.tex
@@ -1,6 +1,6 @@
 \chapter{Formeltabell}
 
-\begin{table}[ht]
+\begin{table}[H]
   \centering
   \footnotesize
   \begin{tabularx}{\textwidth}{@{}>{\color{black!70}}l>{\raggedright\arraybackslash}X@{}}
