Refactor LaTeX package usage and add trymtex package for improved document structure

--- a/main.tex
+++ b/main.tex
@@ -1,6 +1,5 @@
 \documentclass[10pt, a4paper]{report}
-\usepackage{preamble/trymtex}
-\usepackage{preamble/colors}
+\usepackage{trymtex}
 
 \includeonly{
     preamble/frontmatter/titlepage,
